[tool.poetry]
name = "antminermonitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.1.0"
werkzeug = "2.0.3"
flask-login = "0.5.0"
flask-migrate = "2.5.2"
flask-wtf = "0.14.3"
python-dotenv = "0.11.0"
sqlalchemy = "1.3.1"
wtforms = "3.0.0"
wtforms-components = "0.10.4"
jinja2 = "3.0.3"


[tool.poetry.scripts]
create-db = "antminermonitor.create_db:main"
create-admin = "antminermonitor.create_admin:main"
manage = "antminermonitor.manage:main"

[tool.poetry.group.dev.dependencies]
isort = "4.3.21"
yapf = "0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
